src/agent/cli/product/tui_app/src/bottom_pane/snapshots/lha_cli__product__tui_app__bottom_pane__chat_composer__tests__footer_collapse_code_queue_full.snap
---
source: src/agent/cli/product/tui_app/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                               .----.   "
"                                                                                                              ( @  @ )  "
"                                                                                                              (______)  "
"                                                                                                              /\/\/\/\\ "
"                                                                                                                Echo    "
"› Test                                                                                                                  "
"                                                                                                                        "
"  gpt-5.4 high · 98% left · ~/Workspace/lha                                  Identity programmer (shift+tab to change)  "
